--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <a
             href="https://www.instagram.com/cn_zenande?igsh=MWZyc3h5bWl6eXJkbg=="
             target="_blank"
-            >CN MTHEMBU</a
-          >
+            >CN MTHEMBU
+          </a>
           and is
           <a href="https://github.com/" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
