--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
           </a>
           and is
           <a href="https://github.com/" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a
+            href="https://app.netlify.com/teams/chumanande80/projects"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
